## 2019-10-31
- submit the first version of terark-core as a standalone product, will add more API documents and test cases in the future.