@@ -1,0 +1,22 @@
+stages:
+  - prepare
+  - build
+  - unittest
+  - benchmark
+
+prepare:
+  stage: prepare
+  script:
+    - git clone git@code.byted.org:storage/terark-zip.git
+    - echo $CI_COMMIT_SHA && cd terark-zip && git checkout $CI_COMMIT_SHA
+    - git submodule update --init --recursive
+    - mkdir build && cd build && cmake ../ -DCMAKE_BUILD_TYPE=Debug
+  tags:
+    - terark
+
+build:
+  stage: build
+  script:
+    - cd terark-zip && make -j $(nproc)
+  tags:
+    - terark
