@@ -1,6 +1,6 @@
 [submodule "boost-include"]
 	path = boost-include
 	url = git@code.byted.org:storage/boost-include.git
-[submodule "gtests/googletest"]
-	path = gtests/googletest
+[submodule "3rdparty/googletest"]
+	path = 3rdparty/googletest
 	url = ssh://git@code.byted.org/inf/googletest
